// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createWorkItemBatchRequest creates fields list for WorkItemTracking.WorkItemExpand.None 1`] = `
{
  "$expand": 0,
  "asOf": 1960-11-29T01:34:00.000Z,
  "errorPolicy": 2,
  "fields": [
    "System.WorkItemType",
    "System.Title",
    "System.State",
    "System.CreatedBy",
    "System.AssignedTo",
    "Microsoft.VSTS.Common.BacklogPriority",
    "Microsoft.VSTS.Scheduling.Effort",
    "Microsoft.VSTS.Scheduling.StoryPoints",
  ],
  "ids": [
    4,
    6,
    7,
    9,
    11,
  ],
}
`;

exports[`createWorkItemBatchRequest does not create fields list for WorkItemTracking.WorkItemExpand.Fields 1`] = `
{
  "$expand": 2,
  "asOf": 1960-11-29T01:34:00.000Z,
  "errorPolicy": 2,
  "fields": [],
  "ids": [
    4,
    6,
    7,
    9,
    11,
  ],
}
`;

exports[`createWorkItemBatchRequests createWorkItemBatchRequest returns the expected results for QueryType 1 1`] = `
[
  {
    "$expand": 1,
    "asOf": "2020-10-30T20:40:45.247Z",
    "errorPolicy": 2,
    "fields": [],
    "ids": [
      1,
      2,
    ],
  },
  {
    "$expand": 0,
    "asOf": "2020-10-30T20:40:45.247Z",
    "errorPolicy": 2,
    "fields": [
      "System.Id",
      "System.WorkItemType",
      "System.Title",
      "System.State",
      "Microsoft.VSTS.Common.BacklogPriority",
      "Microsoft.VSTS.Scheduling.Effort",
      "Microsoft.VSTS.Scheduling.StoryPoints",
    ],
    "ids": [
      1,
      2,
    ],
  },
]
`;

exports[`createWorkItemBatchRequests createWorkItemBatchRequest returns the expected results for QueryType2 1`] = `
[
  {
    "$expand": 1,
    "asOf": "2020-10-29T03:14:04.840Z",
    "errorPolicy": 2,
    "fields": [],
    "ids": [
      1,
      3,
      4,
      5,
      8,
      2,
      6,
      7,
      9,
    ],
  },
  {
    "$expand": 0,
    "asOf": "2020-10-29T03:14:04.840Z",
    "errorPolicy": 2,
    "fields": [
      "System.Id",
      "System.WorkItemType",
      "System.Title",
      "System.State",
      "Microsoft.VSTS.Common.BacklogPriority",
      "Microsoft.VSTS.Scheduling.Effort",
      "Microsoft.VSTS.Scheduling.StoryPoints",
    ],
    "ids": [
      1,
      3,
      4,
      5,
      8,
      2,
      6,
      7,
      9,
    ],
  },
]
`;

exports[`getWorkItemsByQueryID returns expected results for queryType = 1 1`] = `
[
  {
    "assignedTo": "",
    "children": [
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 5,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 3,
        "state": "Done",
        "stateCategory": "Completed",
        "stateColor": "339933",
        "title": "Filter out queries that won't work from the selection list",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 3,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 5,
        "state": "Committed",
        "stateCategory": "InProgress",
        "stateColor": "007acc",
        "title": "Get all the shared queries from ADO into a list for selection",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 8,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 2,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Add option to scale graphs to story point sizes",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 4,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 8,
        "state": "Approved",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Allow user to select a query and store the selection as configuration data",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
    ],
    "childrenCompletedSize": 3,
    "childrenTotalSize": 18,
    "contact": "",
    "createdBy": "Richard Mouser",
    "hasChildren": true,
    "id": 1,
    "parentStateCategories": [
      {
        "size": 3,
        "stateCategory": "Completed",
        "stateColor": "#339933",
      },
      {
        "size": 5,
        "stateCategory": "InProgress",
        "stateColor": "#007acc",
      },
      {
        "size": 10,
        "stateCategory": "Proposed",
        "stateColor": "#b2b2b2",
      },
      {
        "size": 0,
        "stateCategory": "Removed",
        "stateColor": "#ffffff",
      },
    ],
    "percentComplete": "1/4",
    "priority": 999936756,
    "size": 0,
    "state": "In Progress",
    "stateCategory": "InProgress",
    "stateColor": "007acc",
    "title": "Allow user to pick a query that returns parent/child work items",
    "unsized": true,
    "wit": "Feature",
  },
  {
    "assignedTo": "Ricky Mouser",
    "children": [
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 9,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Implement the visualization that most people like best",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 6,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Get data for the configured query",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 7,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Draw at least 6 variations on how to visualize the data",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
    ],
    "childrenCompletedSize": 0,
    "childrenTotalSize": 13.5,
    "contact": "",
    "createdBy": "Richard Mouser",
    "hasChildren": true,
    "id": 2,
    "parentStateCategories": [
      {
        "size": 0,
        "stateCategory": "Completed",
        "stateColor": "#339933",
      },
      {
        "size": 0,
        "stateCategory": "InProgress",
        "stateColor": "#007acc",
      },
      {
        "size": 13.5,
        "stateCategory": "Proposed",
        "stateColor": "#b2b2b2",
      },
      {
        "size": 0,
        "stateCategory": "Removed",
        "stateColor": "#ffffff",
      },
    ],
    "percentComplete": "0/3",
    "priority": 999968378,
    "size": 0,
    "state": "New",
    "stateCategory": "Proposed",
    "stateColor": "b2b2b2",
    "title": "Show a visual representation of progress on parent/child work items",
    "unsized": true,
    "wit": "Feature",
  },
]
`;

exports[`processQueryType1 returns expected results 1`] = `
[
  {
    "assignedTo": "",
    "children": [
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 5,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 3,
        "state": "Done",
        "stateCategory": "Completed",
        "stateColor": "339933",
        "title": "Filter out queries that won't work from the selection list",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 3,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 5,
        "state": "Committed",
        "stateCategory": "InProgress",
        "stateColor": "007acc",
        "title": "Get all the shared queries from ADO into a list for selection",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 8,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 2,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Add option to scale graphs to story point sizes",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 4,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 8,
        "state": "Approved",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Allow user to select a query and store the selection as configuration data",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
    ],
    "childrenCompletedSize": 3,
    "childrenTotalSize": 18,
    "contact": "",
    "createdBy": "Richard Mouser",
    "hasChildren": true,
    "id": 1,
    "parentStateCategories": [
      {
        "size": 3,
        "stateCategory": "Completed",
        "stateColor": "#339933",
      },
      {
        "size": 5,
        "stateCategory": "InProgress",
        "stateColor": "#007acc",
      },
      {
        "size": 10,
        "stateCategory": "Proposed",
        "stateColor": "#b2b2b2",
      },
      {
        "size": 0,
        "stateCategory": "Removed",
        "stateColor": "#ffffff",
      },
    ],
    "percentComplete": "1/4",
    "priority": 999936756,
    "size": 0,
    "state": "In Progress",
    "stateCategory": "InProgress",
    "stateColor": "007acc",
    "title": "Allow user to pick a query that returns parent/child work items",
    "unsized": true,
    "wit": "Feature",
  },
  {
    "assignedTo": "Ricky Mouser",
    "children": [
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 9,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Implement the visualization that most people like best",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 6,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Get data for the configured query",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 7,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Draw at least 6 variations on how to visualize the data",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
    ],
    "childrenCompletedSize": 0,
    "childrenTotalSize": 13.5,
    "contact": "",
    "createdBy": "Richard Mouser",
    "hasChildren": true,
    "id": 2,
    "parentStateCategories": [
      {
        "size": 0,
        "stateCategory": "Completed",
        "stateColor": "#339933",
      },
      {
        "size": 0,
        "stateCategory": "InProgress",
        "stateColor": "#007acc",
      },
      {
        "size": 13.5,
        "stateCategory": "Proposed",
        "stateColor": "#b2b2b2",
      },
      {
        "size": 0,
        "stateCategory": "Removed",
        "stateColor": "#ffffff",
      },
    ],
    "percentComplete": "0/3",
    "priority": 999968378,
    "size": 0,
    "state": "New",
    "stateCategory": "Proposed",
    "stateColor": "b2b2b2",
    "title": "Show a visual representation of progress on parent/child work items",
    "unsized": true,
    "wit": "Feature",
  },
]
`;

exports[`processQueryType2 returns expected results 1`] = `
[
  {
    "assignedTo": "",
    "children": [
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 5,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 3,
        "state": "Done",
        "stateCategory": "Completed",
        "stateColor": "339933",
        "title": "Filter out queries that won't work from the selection list",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 3,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 5,
        "state": "Committed",
        "stateCategory": "InProgress",
        "stateColor": "007acc",
        "title": "Get all the shared queries from ADO into a list for selection",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 4,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 8,
        "state": "Approved",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Allow user to select a query and store the selection as configuration data",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 8,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 2,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Add option to scale graphs to story point sizes",
        "unsized": false,
        "wit": "Product Backlog Item",
      },
    ],
    "childrenCompletedSize": 3,
    "childrenTotalSize": 18,
    "contact": "",
    "createdBy": "Richard Mouser",
    "hasChildren": true,
    "id": 1,
    "parentStateCategories": [
      {
        "size": 3,
        "stateCategory": "Completed",
        "stateColor": "#339933",
      },
      {
        "size": 5,
        "stateCategory": "InProgress",
        "stateColor": "#007acc",
      },
      {
        "size": 10,
        "stateCategory": "Proposed",
        "stateColor": "#b2b2b2",
      },
      {
        "size": 0,
        "stateCategory": "Removed",
        "stateColor": "#ffffff",
      },
    ],
    "percentComplete": "1/4",
    "priority": 999936756,
    "size": 0,
    "state": "In Progress",
    "stateCategory": "InProgress",
    "stateColor": "007acc",
    "title": "Allow user to pick a query that returns parent/child work items",
    "unsized": true,
    "wit": "Feature",
  },
  {
    "assignedTo": "Ricky Mouser",
    "children": [
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 6,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Get data for the configured query",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 7,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Draw at least 6 variations on how to visualize the data",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
      {
        "assignedTo": "Ricky Mouser",
        "children": [],
        "childrenCompletedSize": 0,
        "childrenTotalSize": 0,
        "contact": "",
        "createdBy": "Richard Mouser",
        "hasChildren": false,
        "id": 9,
        "parentStateCategories": [],
        "percentComplete": "",
        "priority": 8888888888,
        "size": 4.5,
        "state": "New",
        "stateCategory": "Proposed",
        "stateColor": "b2b2b2",
        "title": "Implement the visualization that most people like best",
        "unsized": true,
        "wit": "Product Backlog Item",
      },
    ],
    "childrenCompletedSize": 0,
    "childrenTotalSize": 13.5,
    "contact": "",
    "createdBy": "Richard Mouser",
    "hasChildren": true,
    "id": 2,
    "parentStateCategories": [
      {
        "size": 0,
        "stateCategory": "Completed",
        "stateColor": "#339933",
      },
      {
        "size": 0,
        "stateCategory": "InProgress",
        "stateColor": "#007acc",
      },
      {
        "size": 13.5,
        "stateCategory": "Proposed",
        "stateColor": "#b2b2b2",
      },
      {
        "size": 0,
        "stateCategory": "Removed",
        "stateColor": "#ffffff",
      },
    ],
    "percentComplete": "0/3",
    "priority": 999968378,
    "size": 0,
    "state": "New",
    "stateCategory": "Proposed",
    "stateColor": "b2b2b2",
    "title": "Show a visual representation of progress on parent/child work items",
    "unsized": true,
    "wit": "Feature",
  },
]
`;
